Integration with spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 # Uncomment below line when standard port 8080 is occupied.
 #server.port=8090
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=neodb
